Fixed h1 on mobile view.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -71,9 +71,13 @@
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+        font-size: 4rem;
+        text-align: center;
     }
 
     .projects {
         grid-template-columns: 1fr;
     }
+
+
 }
